--- a/examples/linear_1.html
+++ b/examples/linear_1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
-<script type="text/javascript" src="javascripts/d3.v3.js"></script>
-<script type="text/javascript" src="javascripts/d3charts.src.js"></script>
+<script type="text/javascript" src="../lib/d3.v3.js"></script>
+<script type="text/javascript" src="d3charts.src.js"></script>
 <script>
 function draw() {
     var opts = {
@@ -30,8 +30,8 @@ function draw() {
                 fillOpacity : 0,
                 border : {},
                 series : [{
-                        type : 'bullet',
-                        orient : 'horizontal',
+                        type : 'linear',
+                        round : 20,
                         axisIndex : 0,
                         fill : {
                             type : 'linearGradient',
@@ -40,11 +40,13 @@ function draw() {
                                     offset : '0%',
                                     stopColor : 'blue',
                                     stopOpacity : 1
-                                }, {
+                                },
+								{
                                     offset : '30%',
                                     stopColor : 'white',
                                     stopOpacity : 1
-                                }, {
+                                }
+								, {
                                     offset : '100%',
                                     stopColor : 'blue',
                                     stopOpacity : 1
@@ -52,72 +54,86 @@ function draw() {
                             ]
                         },
                         fillOpacity : 1,
-						title : {
-							enabled:true,
-							text: 'title',
-							font: {
-								fill: 'red',
-								fontSize:'20'
-							}
-						},
-						subtitle: {
-							enabled:true,
-							text: 'subtitle'
-						},
+                        border : {
+                            enabled : true,
+                            stroke : 'red',
+                            strokeOpacity : 1,
+                            strokeWidth : 2,
+                        },
                         data : [{
                                 value : 150,
-                                //size: 20,
-                                fill : 'green',
-                                fillOpacity : 0.5
-                            },
-							{
-                                value : 120,
-                                //size: 20,
-                                fill : 'green',
-                                fillOpacity : 0.5
-                            }
-                        ],
-                        targets : [{
-                                value : 160,
-                                //size: 30,
-                                //width: 10,
-                                //fill: 'red'
-                                //fillOpacity: 1
-                            }
-                        ],
-                        ranges : [{
-                                enabled : true,
-                                type : 'range', // line or range
-                                x1 : 0,
-                                x2 : 100,
-                                fill : 'rgb(0, 255, 255)',
-                                fillOpacity : 1
+                                markerPosition : 'below', // below or above
+                                marker : {
+                                    enabled : true,
+                                    type : 'circle',
+                                    size : 20,
+                                    fill : {
+                                        type : 'radialGradient',
+                                        parameters : ['50%', '50%', '70%', '50%', '50%'],
+                                        stops : [{
+                                                offset : '0%',
+                                                stopColor : 'white',
+                                                stopOpacity : 1
+                                            }, {
+                                                offset : '100%',
+                                                stopColor : 'red',
+                                                stopOpacity : 1
+                                            }
+                                        ]
+
+                                    },
+                                    border : {},
+                                },
+                                labelPosition : 'above',
+                                label : {
+                                    enabled : true,
+                                    text : '',
+                                    font : {
+                                        fill : 'red',
+                                        fillOpacity : 1,
+                                        textAnchor : 'middle', // start/middle/end
+                                    },
+                                    fill : 'pink',
+                                    fillOpacity : 0
+                                }
                             }, {
-                                enabled : true,
-                                type : 'range', // line or range
-                                x1 : 100,
-                                x2 : 200,
-                                fill : 'rgb(0, 255, 128)',
-                                fillOpacity : 1
-                            }, {
-                                enabled : true,
-                                type : 'range', // line or range
-                                x1 : 200,
-                                fill : 'rgb(0, 128, 255)',
-                                fillOpacity : 1
+                                value : 50,
+                                markerPosition : 'below', // below or above
+                                marker : {
+                                    enabled : true,
+                                    type : 'triangle-down',
+                                    size : 15,
+                                    fill : 'yellow',
+                                    border : {
+										stroke : 'black',
+                                        strokeWidth : 1
+									},
+                                },
+                                labelPosition : 'above',
+                                label : {
+                                    enabled : true,
+                                    text : '',
+                                    font : {
+                                        fill : 'yellow',
+                                        fillOpacity : 1,
+                                        textAnchor : 'middle', // start/middle/end
+                                    },
+                                    fill : 'pink',
+                                    fillOpacity : 0
+                                }
                             }
                         ]
+
                     }
                 ]
             },
             yAxis : [{
                     enabled : true,
                     orient : 'bottom',
-					reverse : false,
                     xOffset : 0, // The x offset relative to origin x of axis container, default is 0
                     yOffset : 0, // The y offset relative to origin y of axis container, default is 0
-                    //fill : 'pink', // Default is undefined.
-                    //fillOpacity : 0.5,
+                    fill : 'pink', // Default is undefined.
+                    fillOpacity : 0.5,
                     title : { // Inherit from label options and add following additional options.
                         position : '', // left/middle/right/top/bottom
 
@@ -128,9 +144,9 @@ function draw() {
                         fillOpacity : 1,
                         font : {},
                         //        anchor: 'middle', // start/middle/end
-                        rotation : 0,
+                        //rotation : 45,
                         rotationAnchor : 'middle',
-                        position : 'same', // 'same' or 'opposite', 'same' means label is at same side with major ticks, 'opposite' means different side with major ticks.
+                        position : 'opposite', // 'same' or 'opposite', 'same' means label is at same side with major ticks, 'opposite' means different side with major ticks.
                         format : null
                     },
                     axisLine : {
@@ -158,7 +174,7 @@ function draw() {
                             stroke : 'black',
                             strokeOpacity : 1,
                             strokeWidth : 1,
-                            style : 'below', // cross/above/below
+                            style : 'above', // cross/above/below
                             size : 10,
                             lineStepNumber : 1
                         },
@@ -168,7 +184,7 @@ function draw() {
                             stroke : 'black',
                             strokeOpacity : 1,
                             strokeWidth : 1,
-                            style : 'below', // cross/above/below
+                            style : 'above', // cross/above/below
                             size : 6
                         }
                     }
@@ -181,17 +197,17 @@ function draw() {
             width : '800px',
             height : '100px'
         });
-    var context = new d3charts. ChartContext();
-    var chart = new d3charts.Chart(context, opts).fRender(svg);
-	
-    var series = chart.fSeries('bullet');
-	series[0].options.data[0].value = 100;
-	series[0].options.targets[0].value = 80;
-	series[0].fRedraw();
-}	
+    var context = new d3charts.ChartContext();
+    var linear = new d3charts.Chart(context, opts).fRender(svg);
+
+    var series = linear.fSeries('linear');
+    setInterval(function () {
+        series[0].fMovePointer(0, Math.random() * 120 + 40);
+        series[0].fMovePointer(1, Math.random() * 120 + 40);
+    }, 1000);
+}
 
 </script>
 <body onload="draw();">
 </body>
 </html>
-
